// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index no metadata sync 1`] = `
Array [
  "babel.config.json",
  ".commitlintrc.json",
  ".cz.json",
  ".editorconfig",
  ".eslintrc.json",
  ".gitattributes",
  ".github/DEPRECATED_DEPENDENCIES_ISSUE_TEMPLATE.md",
  ".github/labels.yml",
  ".github/workflows/build.yml",
  ".github/workflows/deprecated-dependencies.yml",
  ".github/workflows/sync-labels.yml",
  ".gitignore",
  ".gitpod.Dockerfile",
  ".gitpod.yml",
  ".huskyrc.json",
  ".releaserc.json",
  ".renovaterc.json",
  ".vscode/settings.json",
  ".yarnrc.yml",
  "LICENSE.md",
  "README.md",
  "package.json",
]
`;

exports[`index works 1`] = `
Array [
  ".commitlintrc.json",
  ".cz.json",
  ".devcontainer/devcontainer.json",
  ".editorconfig",
  ".eslintrc.json",
  ".gitattributes",
  ".github/DEPRECATED_DEPENDENCIES_ISSUE_TEMPLATE.md",
  ".github/FUNDING.yml",
  ".github/labels.yml",
  ".github/workflows/build.yml",
  ".github/workflows/deprecated-dependencies.yml",
  ".github/workflows/sync-labels.yml",
  ".github/workflows/sync-metadata.yml",
  ".gitignore",
  ".gitpod.Dockerfile",
  ".gitpod.yml",
  ".releaserc.json",
  ".renovaterc.json",
  ".vscode/settings.json",
  "LICENSE.md",
  "README.md",
  "babel.config.json",
  "package.json",
]
`;
